fix: in mobile view, resubmit edit button should always visible

--- a/client/src/mobile.css
+++ b/client/src/mobile.css
@@ -30,6 +30,10 @@
         margin-left: 20px;
     }
 
+    .resubmit-edit-button {
+        display: block;
+    }
+
     .nav {
         position: fixed;
         z-index: 999;
